lib/libui/bottom_pane/snapshots/libui__bottom_pane__approval_overlay__tests__approval_overlay_additional_permissions_macos_prompt.snap
---
source: lib/libui/bottom_pane/approval_overlay.rs
expression: "render_overlay_lines(&view, 120)"
---

  Would you like to run the following command?

  Reason: need macOS automation

  Permission rule: macOS preferences readwrite; macOS automation com.apple.Calendar, com.apple.Notes; macOS
  accessibility; macOS calendar; macOS reminders

  $ osascript -e 'tell application'

› 1. Yes, proceed (y)
  2. No, and tell FreeChaOS what to do differently (esc)

  Press enter to confirm or esc to cancel
