lib/libui/bottom_pane/snapshots/libui__bottom_pane__approval_overlay__tests__approval_overlay_cross_process_prompt.snap
---
source: lib/libui/bottom_pane/approval_overlay.rs
expression: "renderable_trim_end_string_at_desired_height(&view, 80)"
---

  Would you like to run the following command?

  Process: Robie [scout]

  $ echo hi

› 1. Yes, proceed (y)
  2. No, and tell FreeChaOS what to do differently (esc)

  Press enter to confirm or esc to cancel or o to open process
